add pdf link for some papers

--- a/publication_2014.html
+++ b/publication_2014.html
@@ -76,37 +76,37 @@ var _hmt = _hmt || [];
 <h4 class="extra"> 2014 and before </h4>
 
 <p>------------------------  Journal Papers  ------------------------</p>
-<p>1.	Si Liu, Jiashi Feng, Csaba Domokos, Junshi Huang, Zhenzhen Hu, Shuicheng Yan. “Fashion Parsing with Weak Color-Category Labels.” IEEE Transactions on Multimedia (TMM), 2014, [Project Page] </p>
+<p>1.	Si Liu, Jiashi Feng, Csaba Domokos, Junshi Huang, Zhenzhen Hu, Shuicheng Yan. “Fashion Parsing with Weak Color-Category Labels.” IEEE Transactions on Multimedia (TMM), 2014, [Project Page] [<a href="pdf/Fashion%20Parsing%20With%20Weak%20Color-Category%20Labels.pdf">Paper</a>] </p>
 <p>2.	Si Liu, Luoqi Liu, Shuicheng Yan: Fashion Analysis: Current Techniques and Future Directions. IEEE MultiMedia 21(2): 72-79 (2014). </p>
 <p>3.	Si Liu, Qiang Chen, Shuicheng Yan, Changsheng Xu, Hanqing Lu. “Snap & Play: Auto-Generate Personalized Find-the-Difference Game.” IEEE Transactions on Image Processing (TIST), 2014. </p>
 <p>4.	Luoqi Liu, Jun¬liang Xing, Si Liu, Hui Xu, Xi Zhou, Shuicheng Yan. “Wow! You Are So Beau¬ti¬ful Today!”. In ACM Trans¬ac¬tions on Mul¬ti¬me¬dia Com¬put¬ing, Com¬mu¬ni¬ca¬tions and Ap¬pli¬ca¬tions (TOM¬C¬CAP). In 2014. </p>
-<p>5.	Si Liu, Shuicheng Yan, Tianzhu Zhang, Changsheng Xu, Jing Liu, Hanqing Lu. “Weakly-Supervised Graph Propagation Towards Collective Image Parsing.” IEEE Transactions on Multimedia (TMM), Volume: 14, Issue: 2, Page(s): 361-373, 2012. </p>
+<p>5.	Si Liu, Shuicheng Yan, Tianzhu Zhang, Changsheng Xu, Jing Liu, Hanqing Lu. “Weakly-Supervised Graph Propagation Towards Collective Image Parsing.” IEEE Transactions on Multimedia (TMM), Volume: 14, Issue: 2, Page(s): 361-373, 2012. [<a href="pdf/Weakly%20Supervised%20Graph%20Propagation%20Towards%20Collective%20Image%20Parsing.pdf">Paper</a>]</p>
 <p>6.	Tianzhu Zhang, Si Liu, Narendra Ahuja, Ming-Hsuan Yang, Bernard Ghanem, “Robust Visual Tracking via Consistent Low-Rank Sparse Learning”, International Journal of Computer Vision (IJCV), 2014, in press, * Corresponding author. </p>
-<p>7.	Zhenzhen Hu, Si Liu, Jianguo Jiang, Richang Hong, Meng Wang, Shuicheng Yan: PicWords: Render a Picture by Packing Keywords. IEEE Transactions on Multimedia (TMM) 16(4): 1156-1164 (2014), * Corresponding author. </p>
+<p>7.	Zhenzhen Hu, Si Liu, Jianguo Jiang, Richang Hong, Meng Wang, Shuicheng Yan: PicWords: Render a Picture by Packing Keywords. IEEE Transactions on Multimedia (TMM) 16(4): 1156-1164 (2014), * Corresponding author. [<a href="pdf/PicWords%20Render%20a%20Picture%20by%20Packing%20Keywords.pdf">Paper</a>] </p>
 <p>8.	Junshi Huang, Si Liu, Junliang Xing, Tao Mei, Shuicheng Yan. “Circle & Search:  Attribute-aware Shoe
-Retrieval.” Transactions on Multimedia Computing, Communications, and Applications (TOMCCAP), 2014. </p>
+Retrieval.” Transactions on Multimedia Computing, Communications, and Applications (TOMCCAP), 2014. [<a href="pdf/Circle%20%20Search%20Attribute-Aware%20Shoe%20Retrieval.pdf">Paper</a>] </p>
 <p>9.	Annan Li, Luoqi Liu, Kang Wang, Si Liu, Shuicheng Yan. Clothing Attributes Assisted Person Re-identification. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). In 2014</p>
-<p>10.	Tam V. Nguyen, Si Liu, Bingbing Ni, Jun Tan, Yong Rui, Shuicheng Yan. “Towards Decrypting Attractiveness via Multi-Modality Cues.” Transactions on Multimedia Computing, Communications, and Applications (TOMCCAP), 2013. </p>
+<p>10.	Tam V. Nguyen, Si Liu, Bingbing Ni, Jun Tan, Yong Rui, Shuicheng Yan. “Towards Decrypting Attractiveness via Multi-Modality Cues.” Transactions on Multimedia Computing, Communications, and Applications (TOMCCAP), 2013. [<a href="pdf/Towards%20Decrypting%20Attractiveness%20via%20Multi-Modality%20Cues.pdf">Paper</a>]  </p>
 <p>11.	Tianzhu Zhang, Bernard Ghanem, Si Liu*, Narendra Ahuja. “Robust Visual Tracking via Structured Multi-Task Sparse Learning.” International Journal of Computer Vision (IJCV), Volume: 101, Issue: 2, Page(s): 367-383, 2012. </p>
 <p>12.	Tianzhu Zhang, Changsheng Xu, Guangyu Zhu, Si Liu and Hanqing Lu. “A Generic Framework for Video Annotation via Semi-supervised Learning.” IEEE Transactions on Multimedia (TMM), Volume: 14, Issue: 4, Page(s): 1206-1219, 2012.</p>
 <p>13.	Tianzhu Zhang, Jing Liu, Si Liu, Changsheng Xu, and Hanqing Lu. “Boosted Exemplar Learning for Action Recognition and Annotation.” IEEE Transactions on Circuits and Systems for Video Technology (TCSVT), Volume: 21, Issue: 7, Page(s): 853-866, 2011</p>
 
 <p>------------------------   Conference Papers   ------------------------</p>
-<p>1.	Si Liu, Xiaodan Liang, Luoqi Liu, Liang Lin, Ke Lv, Shuicheng Yan. Fashion Parsing with Video Context. ACM MM, 2014, (full paper).
-</p><p>2.	Si Liu, Tam V. Nguyen, Jiashi Feng, Meng Wang, Shuicheng Yan, “Hi, magic closet, tell me what to wear!” ACM MM, 2012, (Best Technical Demonstration Award).
+<p>1.	Si Liu, Xiaodan Liang, Luoqi Liu, Liang Lin, Ke Lv, Shuicheng Yan. Fashion Parsing with Video Context. ACM MM, 2014, (full paper). [<a href="pdf/Fashion%20Parsing%20with%20Video%20Context.pdf">Paper</a>]
+</p><p>2.	Si Liu, Tam V. Nguyen, Jiashi Feng, Meng Wang, Shuicheng Yan, “Hi, magic closet, tell me what to wear!” ACM MM, 2012, (Best Technical Demonstration Award) [<a href="pdf/¡°Hi,%20Magic%20Closet,%20Tell%20Me%20What%20to%20Wear!¡±.pdf">Paper</a>] .
 </p> <p> 3.	Si Liu, Jiashi Feng, Zheng Song, Tianzhu Zhang, Hanqing Lu, Changsheng Xu, Shuicheng Yan. “Hi, magic closet, tell me what to wear!” ACM MM, 2012, (full paper).
 </p>	<p>4.	Si Liu, Zheng Song, Guangcan Liu, Shuicheng Yan, Changsheng Xu, Hanqing Lu. “Street-to-Shop: Cross-Scenario Clothing Retrieval via Human Part Alignment and Auxiliary Set.” CVPR, 2012, (Oral, 2.5%).
 </p><p>4.	Si Liu, Hairong Liu, Shuicheng Yan, Longin Latecki, Changsheng Xu, Hanqing Lu. “Size Adaptive Selection of Most Informative Features.” AAAI 2011, (Oral, 4.8% acceptance rate).
 </p><p>6.	Si Liu, Qiang Chen, Shuicheng Yan, Changsheng Xu, Hanqing Lu. “Snap & Play: Auto-generate Personalized Find-the-Difference Mobile Game.” ACM MM, 2011.
-</p><p>7.	Si Liu, Zheng Song, Meng Wang, Changsheng Xu, Hanqing Lu, Shuicheng Yan. “Street-to-shop: cross-scenario clothing retrieval via parts alignment and auxiliary set.” ACM MM demo, 2012.
+</p><p>7.	Si Liu, Zheng Song, Meng Wang, Changsheng Xu, Hanqing Lu, Shuicheng Yan. “Street-to-shop: cross-scenario clothing retrieval via parts alignment and auxiliary set.” ACM MM demo, 2012. [<a href="pdf/Street-to-shop%20Cross-scenario%20clothing%20retrieval%20via%20parts%20alignment%20and%20auxiliary%20set.pdf">Paper</a>]
 </p><p>8.	Xiaochun Cao, Hua Zhang, Xiaojie Guo, Si Liu, and Xiaowu Chen, Puzzle Search: Image Retrieval and Ranking  with  Consistent Reconstruction of Multi-Attribute Queries, ECCV, 2014.
 </p><p>9.	Luoqi Liu, Hui Xu, Junliang Xing, Si Liu, Xi Zhou, Shuicheng Yan. ”Wow! you are so beautiful today!” ACM MM, 2013. (Best Paper Award).
 </p><p>10.	Min Lin, Zhenzhen Hu, Si Liu, Meng Wang, Richang Hong, Shuicheng Yan. ”eHeritage of shadow puppetry: creation and manipulation.” ACM MM, 2013. (Oral, 20% acceptance rate).
-</p><p>11.	Luoqi Liu, Hui Xu, Si Liu, Junliang Xing, Xi Zhou, Shuicheng Yan: ”Wow! you are so beautiful today!” ACM MM demo, 2013.
+</p><p>11.	Luoqi Liu, Hui Xu, Si Liu, Junliang Xing, Xi Zhou, Shuicheng Yan: ”Wow! you are so beautiful today!” ACM MM demo, 2013. [<a href="pdf/Wow!%20you%20are%20so%20beautiful%20today!.pdf">Paper</a>]
 </p><p>12.	Zhenzhen Hu, Min Lin, Si Liu, Meng Wang, Richang Hong, Shuicheng Yan. “eHeritage of shadow puppetry: creation and manipulation.” ACM MM demo, 2013.
 </p><p>13.	Tianzhu Zhang, Bernard Ghanem, Si Liu, Changsheng Xu , Narendra Ahuja. “Low-Rank Sparse Coding for Image Classification.” ICCV, 2013.
 </p><p>14.	Xiaochun Cao, Hua Zhang, Si Liu, Xiaojie Guo. “SYM-FISH: A Symmetry-aware Flip Invariant Sketch Histogram Shape Descriptor.” ICCV 2013.
-</p><p>15.	Tam V. Nguyen, Si Liu, Bingbing Ni, Jun Tan, Yong Rui, Shuicheng Yan. “Sense beauty via face, dressing, and/or voice.” ACM MM 2012, (full paper).
+</p><p>15.	Tam V. Nguyen, Si Liu, Bingbing Ni, Jun Tan, Yong Rui, Shuicheng Yan. “Sense beauty via face, dressing, and/or voice.” ACM MM 2012, (full paper). [<a href="pdf/Sense%20Beauty%20via%20Face,%20Dressing,%20and%20or%20Voice.pdf">Paper</a>]
 </p><p>16.	Tianzhu Zhang, Bernard Ghanem, Si Liu, Narendra Ahuja. “Low-Rank Sparse Learning for Robust Visual Tracking.” ECCV, 2012.
 </p><p>17.	Tianzhu Zhang, Bernard Ghanem, Si Liu, Narendra Ahuja. “Robust Visual Tracking via Multi-Task Sparse Learning.” CVPR, 2012, (Oral, 2.5%).
 </p><p>18.	Tianzhu Zhang, Changsheng Xu, Guangyu Zhu, Si Liu, Hanqing Lu. “A Generic Framework for Event Detection in Various Video Domain.” ACM MM, 2010 (full paper).
