--- a/publication_2015.html
+++ b/publication_2015.html
@@ -75,18 +75,18 @@ var _hmt = _hmt || [];
 <div class="wrapper">
 <h4 class="extra">2015</h4>
 <p>------------------------  Journal Papers  ------------------------</p>
-<p>1.	Si Liu, Xiaodan Liang, Luoqi Liu, Liang Lin, Ke Lv, Xiaochun Cao , Shuicheng Yan, Fashion Parsing With Video Context, IEEE Transactions on Multimedia (TMM) 2015.  </p>
-<p>2.	Xiaochun Cao, Hua Zhang, Xiaojie Guo, Si Liu and Dan Meng, SLED: Semantic Label Embedding Dictionary Representation for Multi-label Image Annotation, IEEE Trans. on Image Processing (TIP) ,  2015. </p>
-<p>3.	Xiaodan Liang, Si Liu, Xiaohui Shen, Jianchao Yang, Luoqi Liu, Liang Lin, Shuicheng Yan, Deep Human Parsing with Active Template Regression, IEEE Transactions on Pattern Analysis and Machine Intelligence, (TPAMI) 2015. </p>
+<p>1.	Si Liu, Xiaodan Liang, Luoqi Liu, Liang Lin, Ke Lv, Xiaochun Cao , Shuicheng Yan, Fashion Parsing With Video Context, IEEE Transactions on Multimedia (TMM) 2015. [<a href="pdf/Fashion%20Parsing%20with%20Video%20Context.pdf">Paper</a>] </p>
+<p>2.	Xiaochun Cao, Hua Zhang, Xiaojie Guo, Si Liu and Dan Meng, SLED: Semantic Label Embedding Dictionary Representation for Multi-label Image Annotation, IEEE Trans. on Image Processing (TIP), 2015.  </p>
+<p>3.	Xiaodan Liang, Si Liu, Xiaohui Shen, Jianchao Yang, Luoqi Liu, Liang Lin, Shuicheng Yan, Deep Human Parsing with Active Template Regression, IEEE Transactions on Pattern Analysis and Machine Intelligence, (TPAMI) 2015. [<a href="pdf/Deep%20Human%20Parsing%20with%20Active%20Template%20regression.pdf">Paper</a>] </p>
 
 <p>------------------------   Conference Papers   ------------------------</p>
-<p> 1.	Chuan Wang, Hua Zhang, Yang Liang, Si Liu, Xiaochun Cao, Deep People Counting in Extremely Dense Crowds, ACM MM 2015. [Paper]</p>
-<p> 2.	Si Liu, Xiaodan Liang, Luoqi Liu,  Xiaohui Shen, Jianchao Yang, Changsheng Xu, Xiaochun Cao, Shuicheng Yan. “Matching-CNN Meets KNN: Quasi-Parametric Human Parsing. CVPR 2015[Paper]</p>
-<p> 3.	Xiaochun Cao, Changqing Zhang, Huazhu Fu, Si Liu. “Diversity-induced Multiview Subspace Clustering.” CVPR 2015 [Paper]</p>
-<p> 4.	Tianzhu Zhang, Si Liu, Changsheng Xu, Shuicheng Yan, Narendra Ahuja, Bernard Ghanem, Ming-Hsuan Yang. “Structural Sparse Tracking”. CVPR, 2015 [Paper]</p>
-<p> 5.	Changqing Zhang, Huazhu Fu, Si Liu, Guangcan Liu, Xiaochun, Cao. Low-Rank Tensor Constrained Multiview Subspace Clustering. ICCV 2015. [Paper]</p>
-<p> 6.	Xiaodan Liang, Si Liu, Yunchao Wei, Luoqi Liu, Liang Lin, Shuicheng Yan. Towards Computational Baby Learning: A Weakly-Supervised Approach for Object Detection. ICCV 2015 [Paper]</p>
-<p> 7.	Xiaodan Liang, Chunyan Xu, Xiaohui Shen, Jianchao Yang, Si Liu, Jinhui Tang, Liang Lin, Shuicheng Yan, Human Parsing With Contextualized Convolutional Neural Network, ICCV 2015. [Paper]</p>
+<p> 1.	Chuan Wang, Hua Zhang, Yang Liang, Si Liu, Xiaochun Cao, Deep People Counting in Extremely Dense Crowds, ACM MM 2015. </p>
+<p> 2.	Si Liu, Xiaodan Liang, Luoqi Liu,  Xiaohui Shen, Jianchao Yang, Changsheng Xu, Xiaochun Cao, Shuicheng Yan. “Matching-CNN Meets KNN: Quasi-Parametric Human Parsing. CVPR 2015 [<a href="pdf/Matching-CNN%20Meets%20KNN%20Quasi-Parametric%20Human%20Parsing.pdf">Paper</a>]</p>
+<p> 3.	Xiaochun Cao, Changqing Zhang, Huazhu Fu, Si Liu. “Diversity-induced Multiview Subspace Clustering.” CVPR 2015 </p>
+<p> 4.	Tianzhu Zhang, Si Liu, Changsheng Xu, Shuicheng Yan, Narendra Ahuja, Bernard Ghanem, Ming-Hsuan Yang. “Structural Sparse Tracking”. CVPR, 2015 </p>
+<p> 5.	Changqing Zhang, Huazhu Fu, Si Liu, Guangcan Liu, Xiaochun, Cao. Low-Rank Tensor Constrained Multiview Subspace Clustering. ICCV 2015. </p>
+<p> 6.	Xiaodan Liang, Si Liu, Yunchao Wei, Luoqi Liu, Liang Lin, Shuicheng Yan. Towards Computational Baby Learning: A Weakly-Supervised Approach for Object Detection. ICCV 2015 [<a href="pdf/Towards%20computational%20baby%20learning%20A%20weakly-supervised%20approach%20for%20object%20detection.pdf">Paper</a>]</p>
+<p> 7.	Xiaodan Liang, Chunyan Xu, Xiaohui Shen, Jianchao Yang, Si Liu, Jinhui Tang, Liang Lin, Shuicheng Yan, Human Parsing With Contextualized Convolutional Neural Network, ICCV 2015. </p>
 
 <div class="clear"></div></div>
 
