redirect index.html to new site

--- a/index.html
+++ b/index.html
@@ -20,278 +20,9 @@ var _hmt = _hmt || [];
 <script type="text/javascript" src="js/FuturisExtra_400.font.js"></script>
 <script type="text/javascript" src="js/cufon-replace.js"></script>
 <script type="text/javascript" src="js/jquery.galleriffic.js"></script>
-<script type="text/javascript">
-      jQuery(document).ready(function($) {
-         // We only want these styles applied when javascript is enabled
-         $('div.navigation').css({'width' : '701px', 'float' : 'left'});
-         $('div.content-gallery').css('display', 'block');
-
-         // Initially set opacity on thumbs and add
-         // additional styling for hover effect on thumbs
-         var onMouseOutOpacity = 0.67;
-         $('#thumbs ul.thumbs li').opacityrollover({
-            mouseOutOpacity:   onMouseOutOpacity,
-            mouseOverOpacity:  1.0,
-            fadeSpeed:         'fast',
-            exemptionSelector: '.selected'
-         });
-
-         // Initialize Advanced Galleriffic Gallery
-         var gallery = $('#thumbs').galleriffic({
-            delay:                     2500,
-            numThumbs:                 3,
-            preloadAhead:              3,
-            enableTopPager:            true,
-            enableBottomPager:         true,
-            maxPagesToShow:            7,
-            imageContainerSel:         '#slideshow',
-            controlsContainerSel:      '#controls',
-            captionContainerSel:       '#caption',
-            loadingContainerSel:       '#loading',
-            renderSSControls:          true,
-            renderNavControls:         true,
-            playLinkText:              'Play Slideshow',
-            pauseLinkText:             'Pause Slideshow',
-            prevLinkText:              'previous',
-            nextLinkText:              'next',
-            nextPageLinkText:          'Next &rsaquo;',
-            prevPageLinkText:          '&lsaquo; Prev',
-            enableHistory:             false,
-            autoStart:                 false,
-            syncTransitions:           true,
-            defaultTransitionDuration: 900,
-            onSlideChange:             function(prevIndex, nextIndex) {
-               // 'this' refers to the gallery, which is an extension of $('#thumbs')
-               this.find('ul.thumbs').children()
-                  .eq(prevIndex).fadeTo('fast', onMouseOutOpacity).end()
-                  .eq(nextIndex).fadeTo('fast', 1.0);
-            },
-            onPageTransitionOut:       function(callback) {
-               this.fadeTo('fast', 0.0, callback);
-            },
-            onPageTransitionIn:        function() {
-               this.fadeTo('fast', 1.0);
-            }
-         });
-      });
-   </script>
 <script type="text/javascript" src="js/jquery.opacityrollover.js"></script>
-<!--[if lt IE 7]>
-     <script type="text/javascript" src="js/ie_png.js"></script>
-     <script type="text/javascript">
-     ie_png.fix('.png, #twitter, .carousel-box button.prev, .carousel-box button.next, div.nav-controls a.prev, div.nav-controls a.next');
-     </script>
-     <link href="css/ie/ie6.css" rel="stylesheet" type="text/css" />
-   <![endif]-->
-<!--[if IE]>
-      <script type="text/javascript" src="js/html5.js"></script>
-   <![endif]-->
 </head>
 <body id="page4">
-<div id="tail-top-right"></div>
-<div id="main-tail-ver">
-  <div id="main-tail-top">
-    <div id="main-bg-top">
-      <div id="main">
-        <!-- header -->
-        <div id="header-bg">
-          <header>
-            <h1><a href="index.html"><span>webstudio</span></a></h1>
-            <a href="#" id=""></a> </header>
-        </div>
-        <!-- content -->
-        <div id="content-bg">
-          <section id="content">
-            <div id="indent">
-              <div class="wrapper">
-                <article id="column-left">
-                  <nav>
-                    <ul>
-                      <li class="act"><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="people.html">People</a></li>
-                      <li ><a href="publication.html">Publication</a></li>
-                      <li ><a href="projects.html">Projects</a></li>
-                      <li><a href="seminar.html">Group seminar</a></li>
-                      <li><a href="recruitment.html">Recruitment</a></li>
-                      <li><a href="life.html">Life</a></li>
-                      <li><a href="contacts.html">Contacts</a></li>
-                    </ul>
-                  </nav>
-                </article>
-                <article id="column-right">
-                  <div class="content-box">
-                    <div class="tail">
-                      <div class="top">
-                        <div class="bot">
-                          <div class="inner">
-                            <div class="wrapper-1">
-                              <h2> What's New in S-Lab</h2>
-                              <!-- Start Advanced Gallery Html Containers -->
-                              <div id="gallery" class="content-gallery">
-                                <div class="wrapper">
-                                  <div class="slideshow-container">
-                                    <div id="loading" class="loader"></div>
-                                    <div id="slideshow" class="slideshow"></div>
-                                  </div>
-                                  <div id="caption" class="caption-container"></div>
-                                </div>
-                              </div>
-                              <div class="wrapper">
-                                <div id="thumbs" class="navigation">
-                                  <ul class="thumbs noscript">
-                                 <li> <a class="thumb" name="leaf" href="images/valse2018liu.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/valse2018.png" width="227" height="147"/> </a>
-                                    <div class="caption">
-                                      <h3> &bull; S-lab members took part in the valse 2018 conference</h3>
-                                      <h3> &bull; S-lab 成员参加valse 2018</h3>
-                                      <p>[2018-4-21]</p>
-                                      <div class="image-desc">
-                                        <p>S-lab members took part in the valse 2018 conference. Prof. Liu was selected to give a talk in Valse 2018. [<a href="https://pan.baidu.com/s/1FYznfGG914pPaU5bs0-4dw">PPT</a>]</p>
-                                        </div>
-                                    </div>
-                                  </li>
-                                 <li class="extra"> <a class="thumb" name="leaf" href="images/pub-big-8.png" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-8.png" width="227" height="147"/> </a>
-                                    <div class="caption">
-                                      <h3> &bull; A cross-domain adaptation paper is accepted by AAAI 2018</h3>
-                                      <h3> &bull; 1篇有关跨域迁移学习的长文被AAAI 2018 接收</h3>
-                                      <p>[2017-11-28]</p>
-                                      <div class="image-desc">
-                                        <p>Si Liu, Yao Sun, Defa Zhu, Guanghui Ren, Yu Chen, Jiashi Feng, and Jizhong Han, Cross-domain Human Parsing via Adversarial Feature and Label Adaptation, AAAI 2018 [<a href="pdf/17058-72879-2-SM.pdf">Full paper</a>]</p>
-                                        </div>
-                                    </div>
-                                  </li>
-
-
-                                   <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3> &bull; Three full papers and two demo papers are accepted by ACM MM 2017</h3>
-                                        <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
-                                        <p>[2017-07-09]</p>
-                                        <div class="image-desc">
-                                          <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017[<a href="pdf/faceaging-acmmm2017.pdf">Full paper</a>]</p>
-<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang, Fast Deep Matting for Portrait Animation on Mobile Phone, ACM MM 2017</p>
-<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei,Magic-wall: Visualizing Room Decoration, ACM MM 2017
- </p>
- <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision, ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
- </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system, ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
- </p>
-                                          </div>
-                                      </div>
-                                    </li>
-
-                                    <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-1.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-1.jpg" width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3> &bull; S-Lab Achieved NO. 1 on CVPR 2017 Visual Understanding of Humans in Crowd Scene & the 1st Look into Person (LIP) Challenge Human Parsing Task!</h3>
-                                        <h3> &bull; S-Lab 获得CVPR 2017 Visual Understanding of Humans in Crowd Scene & the 1st Look into Person (LIP) 竞赛人物分割单元冠军</h3>
-                                        <div class="image-desc">
-                                        <p>[2017-06-04]</p>
-                                          <p> &nbsp;  &nbsp; &nbsp; &nbsp;The S-lab members (Lejian Ren, Renda Bao, Yao San, Si Liu) achieved the top 1 performance on the CVPR 2017 Visual Understanding of Humans in Crowd Scene & the 1st Look into Person (LIP) Challenge Human Parsing and Pose Task! This project is collaborated with Beijing Samsung Telecom R&D Center.  </p>
-                                          </div>
-                                      </div>
-                                    </li>
-                                    <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-2.jpg" title="Title #0"> <img alt="" src="images/pub-2.jpg" width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3>&bull;Two papers about semantic segmentation are accepted by CVPR 2017</h3>
-                                        <h3>&bull;2篇语义分割论文被CVPR 2017 接收 </h3>
-                                        <div class="image-desc">
-                                          <p>[2017-06-26]</p>
-
-<p> 1. Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="pdf/Surveillance Video Parsing with Single Frame Supervision(final version).pdf">Paper</a>]</p>
-<p> 2. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017.
- </p>
-                                        </div>
-                                      </div>
-                                    </li>
-                                    <li> <a class="thumb" name="leaf" href="images/pub-big-3.jpg" title="Title #0"> <img alt="" src="images/pub-3.jpg"  width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3> &bull; Prof. Liu took part in the 2017 CCF Young Elite Forum and is selected to give a talk in CNCC 2017. </h3>
-                                        <h3> &bull; 刘偲老师参加2017 CCF青年精英大会 (http://www.ccf.org.cn/hdhy/qnjydh/) , 并被推选赴2017中国计算机大会(CNCC)进行演讲</h3>
-                                        <div class="image-desc">
-                                         <p>[2017-05-20]</p>
-                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp; On May 20th ,Prof. Liu took part in the 2017 CCF Young Elite Forum organized by China Computer Federation (CCF)  in China National Convention Center.  She introduced her recent work on “pixelwise image semantic understanding” . She was selected to give a talk in the China National Computer Congress, 2017 on Oct 26th - 28th .</p>
-                                        </div>
-                                      </div>
-                                    </li>
-                                    <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-4.jpg" title="Title #0"> <img alt="" src="images/pub-4.jpg"  width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3> &bull; S-lab members took part in the valse 2017 conference</h3>
-                                        <h3> &bull; s-lab 成员参加Valse 2017  </h3>
-                                        <div class="image-desc">
-                                         <p>[2017-04-23]</p>
-                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp; Han Yu, Guanghui Ren and Si Liu took part in the valse 2017. They introduced their CVPR
-2017 work and showed a real demo about human parsing in the surveillance video.
-</p>
-
-                                        </div>
-                                      </div>
-                                    </li>
-                                    <li  class="extra"> <a class="thumb" name="leaf" href="images/pub-big-5.png" title="Title #0"> <img alt="" src="images/pub-5.png"  width="227" height="147"/> </a>
-                                      <div class="caption">
-                                        <h3> &bull; The automatic makeup paper is selected as the best paper runner up of the State Key Lab of Information Security 2016.</h3>
-                                        <h3> &bull; S-Lab自动上妆工作获得信息安全国家重点实验室2016年度最佳论文二等奖</h3><div class="image-desc">
-                                          <p>[2017-02-28]</p>
-                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp;The work of  Xinyu Ou, Ruihe Qian and Si Liu 《 Makeup like a superstar: Deep Localized Makeup Transfer Network》 which is published in IJCAI 2016  has received the best paper runner up award of SKLOIS 2016.
-</p>
-                                        </div>
-                                      </div>
-                                    </li>
-                                    <li> <a class="thumb" name="leaf" href="images/pub-big-6.jpg" title="Title #0"> <img alt="" src="images/pub-6.jpg" width="227" height="147" /> </a>
-                                      <div class="caption">
-                                        <h3> &bull; S-lab receives the special prize of BigData & Computing Intelligence Contest</h3>
-                                        <h3> &bull; S-LAB团队夺得2016CCF大数据与计算智能大赛综合特等奖</h3>
-                                        <div class="image-desc">
-                                          <p>[2016-12-25]</p>
-                                          <p> &nbsp; &nbsp; &nbsp; &nbsp; On Dec. 25th , the S-Lab members (Renda Bao, Guanghui Ren, Defa Zhu) take part in the fine-grained pedestrian recognition in surveillance images task. They beat all the 6500 teams and got the special prize of the BigData & Computing Intelligence Contest.
-</p>
-                                        </div>
-                                      </div>
-                                    </li>
-                                  </ul>
-                                </div>
-                              </div>
-                              <div id="controls"></div>
-                              <!-- END Advanced Gallery Html Containers -->
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </article>
-              </div>
-            </div>
-          </section>
-        </div>
-
-       <!-- footer -->
-        <div id="footer-tail">
-          <footer>
-            <div class="inner">
-              <div class="wrapper">
-                <div class="block-1">
-                  <dl class="list-1">
-                    <dt>  <img src=" " /></dt>
-
-                  </dl>
-                  <p>
-                    <!-- {%FOOTER_LINK} -->
-                  </p>
-                </div>
-                <div class="block-2">
-                  <dl class="list-1">
-                    <dd> <p> </p>
-</dd>
-                  </dl>
-                </div>
-              </div>
-            </div>
-          </footer>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<script type="text/javascript"> Cufon.now(); </script>
+<h1>This website is NOT updated anymore. Please visit our new website: <a href="http://www.colalab.org">www.colalab.org</a></h1>
 </body>
 </html>
