--- a/projects/FACTS.html
+++ b/projects/FACTS.html
@@ -231,10 +231,10 @@
             <h2 id="subject">References</h2>
             <p align="justify" style="text-indent:2em">
                 <ul class="ref-list" align="justify">
-                    <li>[1] Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single
+                    <li>[1] Si Liu, Guanghui Ren, Yao Sun, Jinqiao Wang, Changhu Wang, Bo Li, Shuicheng Yan, Fine-grained Human-centric Tracklet Segmentation with Single Frame Supervision, TPAMI 2019</li>
+                    <li>[2] Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single
                         Frame Supervision, CVPR 2017</li>
-                    <li>[2] Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Changhu Wang, Hanqing Lu and Si Liu, RSVP: A Real-Time
-                        Surveillance Video Parsing System with Single Frame Supervision, ACM MM 2017</li>
+                    
                 </ul>
         </div>
         <br> </br>
